--- a/platform_code/assessment/templates/assessment/base-card-section.html
+++ b/platform_code/assessment/templates/assessment/base-card-section.html
@@ -3,32 +3,32 @@
 {% load static %}
 {% load i18n %}
 
-<html>
-  <head>
-    <title>Section card</title>
-<!--    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">-->
-<!--    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap-theme.min.css">-->
+<!--<html>-->
+<!--  <head>-->
+<!--    <title>Section card</title>-->
+<!--&lt;!&ndash;    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">&ndash;&gt;-->
+<!--&lt;!&ndash;    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap-theme.min.css">&ndash;&gt;-->
 
-            <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'vendor/jquery/jquery.slim.min.js' %}"></script>
+<!--            <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>-->
+<!--    <script src="{% static 'vendor/jquery/jquery.slim.min.js' %}"></script>-->
 
-<!--    <link href="{% static 'vendor/bootstrap/css/bootstrap.css' %}" type="text/css" rel="stylesheet" >-->
-    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" type="text/css" rel="stylesheet" >
-    <link href="{% static 'vendor/bootstrap/css/bootstrap-grid.min.css' %}" type="text/css" rel="stylesheet" >
-    <link href="{% static 'vendor/bootstrap/css/bootstrap-reboot.min.css' %}" type="text/css" rel="stylesheet" >
+<!--&lt;!&ndash;    <link href="{% static 'vendor/bootstrap/css/bootstrap.css' %}" type="text/css" rel="stylesheet" >&ndash;&gt;-->
+<!--    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" type="text/css" rel="stylesheet" >-->
+<!--    <link href="{% static 'vendor/bootstrap/css/bootstrap-grid.min.css' %}" type="text/css" rel="stylesheet" >-->
+<!--    <link href="{% static 'vendor/bootstrap/css/bootstrap-reboot.min.css' %}" type="text/css" rel="stylesheet" >-->
 
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+<!--    <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>-->
+<!--    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>-->
 
-    <link href="{% static 'css/section-card.css' %}" type="text/css" rel="stylesheet" >
+<!--    <link href="{% static 'css/section-card.css' %}" type="text/css" rel="stylesheet" >-->
 
 
-  </head>
+<!--  </head>-->
 
-  <body>
+<!--  <body>-->
 
-    <article class="card text-center " >
-        <div class="row">
+    <article class="card-section text-center " >
+        <div class="row" style="margin-bottom: 30px">
         <h5 class="section-card-title" title="Section {{section.master_section.order_id}}">
             Section {{section.master_section.order_id}} </h5>
 
@@ -40,7 +40,7 @@
                  aria-valuemin="0" aria-valuemax="100" ></div>
         </div>
          </div>
-        <p class="card-title" style="text-align: left; height: 15%;" title="{% blocktrans with name=section.master_section.name %}{{name}}{% endblocktrans %}">
+        <p class="card-title-section" style="text-align: left; height: 15%;" title="{% blocktrans with name=section.master_section.name %}{{name}}{% endblocktrans %}">
             {% blocktrans with name=section.master_section.name %}{{name}}{% endblocktrans %}</p>
        <div id="image"  >
       {% if forloop.counter == 1 %}
@@ -59,13 +59,13 @@
           <img src="{% static 'image/section7.png' %}" class="card-img-top" title="card image" alt="Card image">
       {% endif %}
         </div>
-      <div class="card-body">
-        <p class="card-text">{% blocktrans with description=section.master_section.description %}{{description}}{% endblocktrans %}</p>
+      <div class="card-body-section">
+        <p class="card-text-section">{% blocktrans with description=section.master_section.description %}{{description}}{% endblocktrans %}</p>
         <a href="{{ section.get_absolute_url }}"
-           class="btn btn-primary card-button">{% trans "Go to the section" %}</a>
+           class="btn btn-primary card-button-section">{% trans "Go to the section" %}</a>
       </div>
     </article>
-  </body>
+<!--  </body>-->
 
-</html>
+<!--</html>-->
 
