--- a/platform_code/assessment/templates/assessment/orga-evaluation.html
+++ b/platform_code/assessment/templates/assessment/orga-evaluation.html
@@ -9,6 +9,7 @@
       <thead>
         <tr>
           <th scope="col" class="col-array">{% trans "Evaluation's name" %}</th>
+          <th scope="col" class="col-array">{% trans "Version" %}</th>
           <th scope="col" class="col-array">{% trans "Creation date" %}</th>
           <th scope="col" class="col-array" >{% trans "Validation date" %}</th>
           <th scope="col" class="col-array">{% trans "Evaluation status" %}</th>
@@ -24,6 +25,7 @@
             <tr class="row-array" >
 
               <td class="case-array" >{{evaluation.name}}</td>
+              <td class="case-array" >V{{evaluation.assessment.version}}</td>
               <td class="case-array">{{evaluation.created_at|format_date_calendar}}</td>
 
               {% if evaluation.is_finished %}
@@ -45,11 +47,44 @@
               {% else %}
                 <td class="case-array">-</td>
               {% endif %}
+              {% if evaluation.is_upgradable %}
+                {% if evaluation.is_finished %}
+                  <td class="case-array">
+                    <a class="btn btn-results medium-button" name="resultat-no-modif"
+                       href="{% url 'assessment:results' organisation.id evaluation.slug evaluation.id %}"
+                      >{% trans "Results" %}</a>
+                    <a href="#" data-toggle="modal" data-target="#modal-upgrade-eval{{evaluation.id}}"
+                       class="btn btn-primary medium-button margin-10"
+                        >{% trans "upgrade" %}</a>
+                  </td>
+                {% else %}
+                  <td class="case-array">
+                    <a class="btn btn-modify medium-button" href="{{ evaluation.get_absolute_url}}">{% trans "Modify" %}</a>
+                    <a href="#" data-toggle="modal" data-target="#modal-upgrade-eval{{evaluation.id}}"
+                       class="btn btn-primary medium-button margin-10"
+                        >{% trans "upgrade" %}</a>
+                  </td>
+                {% endif %}
+                <!--        Modal to upgrade-->
+              <div class="modal" id="modal-upgrade-eval{{evaluation.id}}" aria-hidden="true">
+              <div class="modal-dialog ">
+                <div class="modal-content">
 
-              {% if evaluation.is_finished %}
-                <td class="case-array"><a class="btn btn-results" name="resultat-no-modif" href="{% url 'assessment:results' organisation.id evaluation.slug evaluation.id %}">{% trans "See the results" %}</a></td>
+                {% include "assessment/upgrade-modal.html" %}
+
+                </div>
+              </div>
+            </div>
               {% else %}
-                <td class="case-array"><a class="btn btn-modify" href="{{ evaluation.get_absolute_url}}">{% trans "Modify" %}</a></td>
+              {% if evaluation.is_finished %}
+                  <td class="case-array">
+                    <a class="btn btn-results medium-button"
+                       name="resultat-no-modif" href="{% url 'assessment:results' organisation.id evaluation.slug evaluation.id %}"
+                    >{% trans "Results" %}</a></td>
+                {% else %}
+                  <td class="case-array"><a class="btn btn-modify medium-button" href="{{ evaluation.get_absolute_url}}"
+                  >{% trans "Modify" %}</a></td>
+                {% endif %}
               {% endif %}
 
               <td class="div-trash" id="div-trash{{evaluation.id}}" style="border-top:0px; background-color: white;" >
