--- a/platform_code/templates/base-evaluation.html
+++ b/platform_code/templates/base-evaluation.html
@@ -23,6 +23,7 @@
     <link href="{% static 'css/base.css' %}" type="text/css" rel="stylesheet" >
     <link href="{% static 'css/summary.css' %}" type="text/css" rel="stylesheet" >
     <link href="{% static 'css/results.css' %}" type="text/css" rel="stylesheet" >
+    <link href="{% static 'css/section-card.css' %}" type="text/css" rel="stylesheet" >
     <link href="{% static 'css/ubuntu-family.css' %}" type="text/css" rel="stylesheet" >
 </head>
 <body class="navbar-is-fixed-top">
