--- a/platform_code/assessment/templates/assessment/results.html
+++ b/platform_code/assessment/templates/assessment/results.html
@@ -3,6 +3,13 @@
 {% load i18n %}
 
 {% block content %}
+
+{% if evaluation.is_upgradable %}
+<div>
+    {% include "assessment/upgrade-banner.html" %}
+</div>
+{% endif %}
+
 <h1>{{evaluation.name}}</h1>
 
 
