Update email address

--- a/platform_code/home/templates/home/legal-notices.html
+++ b/platform_code/home/templates/home/legal-notices.html
@@ -9,10 +9,10 @@
     <h3 class="about-subtitle">1. Présentation du site.</h3>
     <p>En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il est précisé aux utilisateurs du site <a href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a> l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi :</p>
     <p><strong>Propriétaire</strong> : Substra Foundation – Association loi 1901 - SIRET 83979317100027 – 49 rue de Chateaulin - 44000 - Nantes<br />
-    <strong>Créateur</strong>  : <a href="www.substra.org">Substra Foundation</a><br />
-    <strong>Responsable publication</strong> : Clément Mayer – hello@substra.org<br />
+    <strong>Créateur</strong> : <a href="www.substra.org">Substra Foundation</a><br />
+    <strong>Responsable publication</strong> : Clément Mayer – hello.assessment@substra.org<br />
     Le responsable publication est une personne physique ou une personne morale.<br />
-    <strong>Webmaster</strong> : Clément Mayer – hello@substra.org<br />
+    <strong>Webmaster</strong> : Clément Mayer – hello.assessment@substra.org<br />
     <strong>Hébergeur</strong> : OVH – 2 rue Kellermann - 59100 Roubaix - France<br />
 
     <h3 class="about-subtitle">2. Conditions générales d’utilisation du site et des services proposés.</h3>
