--- a/platform_code/templates/base-evaluation.html
+++ b/platform_code/templates/base-evaluation.html
@@ -105,7 +105,7 @@
             <a href="https://twitter.com/Substra_org" target="_blank" class="fa fa-icon-footer fa-twitter"></a>
             <a href="https://www.linkedin.com/company/substra/" target="_blank" class="fa fa-icon-footer fa-linkedin"></a>
             <a href="https://github.com/SubstraFoundation" target="_blank" class="fa fa-icon-footer fa-github"></a>
-            <a href="mailto:hello@substra.org" target="_blank" class="fa fa-icon-footer fa-envelope"></a>
+            <a href="mailto:hello.assessment@substra.org" target="_blank" class="fa fa-icon-footer fa-envelope"></a>
         </div>
     <!-- /.container -->
   </footer>
