--- a/platform_code/assessment/templates/assessment/organisation.html
+++ b/platform_code/assessment/templates/assessment/organisation.html
@@ -57,8 +57,8 @@
 
 
 <div class="row bottom-page-button" style="margin-top:80px" >
-    <form action="{% url 'home:homepage'  %}" style="margin:auto;" >
-        <input type="submit" value="{% trans 'Back to the homepage' %}"
+    <form action="{% url 'home:user-profile'  %}" style="margin:auto;" >
+        <input type="submit" value="{% trans 'Back to your dashboard' %}"
                class="btn btn-primary same-size-280 " />
     </form>
 
