--- a/platform_code/assessment/templates/assessment/section.html
+++ b/platform_code/assessment/templates/assessment/section.html
@@ -15,6 +15,16 @@
     {% include "assessment/sidebar.html" %}
 </div>
 
+<div class="breadcrumbs">
+    <a href="{% url 'home:user-profile' %}">{% trans 'Dashboard' %}</a>
+    <span> ></span>
+    <a href="{% url 'assessment:orga-summary' evaluation.organisation.id %}">{% trans 'Organisation' %}</a>
+    <span> ></span>
+    <a href="{{ evaluation.get_absolute_url }}">{% trans 'Evaluation' %}</a>
+    <span> ></span>
+    <a href="#" class="active-breadcrumb">{% trans 'Section' %}</a>
+</div>
+
 <div class="main">
     <div id="content-section">
         {% include "assessment/content-section.html" %}
