--- a/platform_code/assessment/static/css/base.css
+++ b/platform_code/assessment/static/css/base.css
@@ -498,6 +498,30 @@ h1 img {
 
 /***** END PROGRESS BAR *****/
 
+/****** BREADCRUMBS *******/
+
+.breadcrumbs{
+    font-size: 16px;
+    margin-top: -30px;
+}
+
+.active-breadcrumb{
+    color: #8985FF;
+}
+
+.active-breadcrumb:hover{
+    color: #8985FF;
+    text-decoration: none;
+}
+
+@media screen and (min-width: 1300px) {
+    .breadcrumbs {
+       margin-left: -150px;
+    }
+}
+
+/****** END BREADCRUMBS ******/
+
 
 /****** CARDS ORGA ******/
 
@@ -509,6 +533,7 @@ h1 img {
 }
 
 /****** END CARDS ORGA ******/
+
 
 .display-line{
     display: flex;
