--- a/platform_code/assessment/templates/assessment/evaluation.html
+++ b/platform_code/assessment/templates/assessment/evaluation.html
@@ -11,6 +11,14 @@
     </div>
 {% endif %}
 
+<div class="breadcrumbs">
+    <a href="{% url 'home:user-profile' %}">{% trans 'Dashboard' %}</a>
+    <span> ></span>
+    <a href="{% url 'assessment:orga-summary' evaluation.organisation.id %}">{% trans 'Organisation' %}</a>
+    <span> ></span>
+    <a href="#" class="active-breadcrumb">{% trans 'Evaluation' %}</a>
+</div>
+
 {% if messages %}
 <ul class="messages">
     {% for message in messages %}
