--- a/platform_code/assessment/static/css/base.css
+++ b/platform_code/assessment/static/css/base.css
@@ -184,6 +184,10 @@ body.navbar-is-fixed-top {
     justify-content: center;
 }
 
+.navbar-nav .nav-link{
+    float: right;
+}
+
 /******* END NAVBAR ********/
 
 .evaluation-title {
@@ -758,6 +762,40 @@ h1 img {
         max-width:1000px;
     }
 }
+
+
+@media (min-width: 780px) {
+    .navbar-expand-lg .navbar-collapse {
+        display: -webkit-box!important;
+        display: -ms-flexbox!important;
+        display: flex!important;
+        -ms-flex-preferred-size: auto;
+        flex-basis: auto;
+    }
+}
+
+@media (min-width: 780px){
+    .navbar-expand-lg .navbar-nav .nav-link {
+        padding-right: .5rem;
+        padding-left: .5rem;
+        float: right;
+        }
+}
+
+@media (min-width: 780px){
+    .navbar-expand-lg .navbar-toggler {
+        display: none;
+        }
+}
+
+@media (min-width: 780px) {
+    .navbar-expand-lg .navbar-nav {
+        -ms-flex-direction: row;
+        flex-direction: row;
+    }
+}
+
+
 /*
 @media (min-width: 1030px) {
     .container-platform {
