--- a/platform_code/templates/base-evaluation.html
+++ b/platform_code/templates/base-evaluation.html
@@ -33,32 +33,44 @@
 
    <div class="ribbon"><span>Beta</span></div>
 
-     <nav class="navbar navbar-expand-lg  is-fixed-top">
+     <nav class="navbar navbar-expand-lg  is-fixed-top" >
     <div class="container">
       <a class="navbar-brand" title="home" href="{% url 'home:homepage' %}" style="color: #FFF;">
-          <img class="logo-navbar" src="{% static 'image/Substra Foundation_Logo horizontal_fond.png' %}"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+          <img class="logo-navbar" src="{% static 'image/Substra Foundation_Logo horizontal_fond.png' %}">
+      </a>
+      <button class="navbar-toggler btn-primary" type="button" data-toggle="collapse"
+              data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+              aria-label="Toggle navigation" id="navbar-button">
+        <i class="fa fa-bars" aria-hidden="true"></i>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+      <div class="collapse navbar-collapse" id="navbarResponsive" >
+        <ul class="navbar-nav ml-auto" >
             {% if user.is_authenticated %}
                 <li class="nav-item">
-                 <a class="nav-link" href="{% url 'home:user-profile' %}">{% trans "My dashboard" %}</a>
+                 <a class="nav-link" href="{% url 'home:user-profile' %}"
+                    id="navbar-link">{% trans "My dashboard" %}
+                 </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'home:resources' %}">{% trans "Resources" %}</a>
+                    <a class="nav-link" href="{% url 'home:resources' %}"
+                    >{% trans "Resources" %}</a>
                 </li>
                 <li class="nav-item">
-                 <a class="nav-link" href="{% url 'home:logout' %}">{% trans "Logout" %}</a>
+                 <a class="nav-link" href="{% url 'home:logout' %}"
+                    >{% trans "Logout" %}
+                 </a>
                 </li>
             {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'home:about' %}">{% trans "About" %}</a>
+                    <a class="nav-link" href="{% url 'home:about' %}"
+                        >{% trans "About" %}
+                    </a>
                 </li>
                 {% if request.get_full_path == "/signup/" or request.get_full_path == "/legal-notices/" or request.get_full_path == "/about/"%}
                 <li class="nav-item">
-                 <a class="nav-link" href="{% url 'home:login' %}">{% trans "Login" %}</a>
+                 <a class="nav-link" href="{% url 'home:login' %}"
+                    >{% trans "Login" %}
+                 </a>
                 </li>
                 {% else %}
                     <li class="nav-item">
