--- a/platform_code/home/templates/home/registration/password_reset_complete.html
+++ b/platform_code/home/templates/home/registration/password_reset_complete.html
@@ -1,8 +1,9 @@
 {% extends 'base-evaluation.html' %}
+{% load i18n %}
 
 {% block content %}
 <div class="container evaluation-title">
-  <h3  class="title-pills">Le mot de passe a bien été changé!</h3>
-  <p><a href="{% url 'home:login' %}" class="btn btn-primary">Connection</a></p>
+  <h3  class="title-pills">{% trans "The password has been changed!" %}</h3>
+  <p><a href="{% url 'home:login' %}" class="btn btn-primary">{% trans "Login" %}</a></p>
 </div>
 {% endblock %}
