--- a/platform_code/home/templates/home/registration/password_reset_confirm.html
+++ b/platform_code/home/templates/home/registration/password_reset_confirm.html
@@ -1,19 +1,20 @@
 {% extends 'base-evaluation.html' %}
+{% load i18n %}
 
 {% block content %}
 
 <div class="evaluation-title container">
   {% if validlink %}
-    <h3  class="title-pills">Changer le mot de passe</h3>
+    <h3  class="title-pills">{% trans "Change the password" %}</h3>
     <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
-      <button class="btn btn-primary" type="submit">Changer le mot de passe</button>
+      <button class="btn btn-primary" type="submit">{% trans "Change the password" %}</button>
     </form>
   {% else %}
     <p>
-      The password reset link was invalid, possibly because it has already been used.
-      Please request a new password reset.
+      {% trans "The password reset link was invalid, possibly because it has already been used.
+      Please request a new password reset." %}
     </p>
   {% endif %}
 
