--- a/platform_code/home/templates/home/registration/password_reset_done.html
+++ b/platform_code/home/templates/home/registration/password_reset_done.html
@@ -1,14 +1,14 @@
 {% extends 'base-evaluation.html' %}
+{% load i18n %}
 
 {% block content %}
 <div class="evaluation-title container">
   <p>
-    We've emailed you instructions for setting your password, if an account exists with the email you entered.
-    You should receive them shortly.
+    {% trans "We've emailed you instructions for setting your password, if an account exists with the email you entered." %}
+    {% trans "You should receive them shortly." %}
   </p>
   <p>
-    If you don't receive an email, please make sure you've entered the address you registered with,
-    and check your spam folder.
+    {% trans "If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder." %}
   </p>
 </div>
 
